--- a/Part2.ipynb
+++ b/Part2.ipynb
@@ -1628,7 +1628,9 @@
    "cell_type": "code",
    "execution_count": 30,
    "id": "7c9e06ce-242b-4009-8b68-f32e3d23c7c9",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
