--- a/NLP EDA.ipynb
+++ b/NLP EDA.ipynb
@@ -1924,7 +1924,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 58,
    "id": "876bde44-1725-4ea1-9004-063fec22ef25",
    "metadata": {},
    "outputs": [],
@@ -1939,7 +1939,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 59,
    "id": "212c0f41-8aeb-4549-a1be-304fa7fccfe5",
    "metadata": {},
    "outputs": [
@@ -2140,21 +2140,21 @@
    ],
    "source": [
     "## Calculate high-rating ngram scores\n",
-    "high_ngram_scores = high_finder.score_ngrams(measures.raw_freq)\n",
-    "high_ngram_scores_df = pd.DataFrame(high_ngram_scores, columns=['high ngram', 'high score'])\n",
+    "high_bigram_scores = high_finder.score_ngrams(measures.raw_freq)\n",
+    "high_bigram_scores_df = pd.DataFrame(high_bigram_scores, columns=['high ngram', 'high score'])\n",
     "\n",
     "\n",
     "## Calculate low-rating ngram scores\n",
-    "low_ngram_scores = low_finder.score_ngrams(measures.raw_freq)\n",
-    "low_ngram_scores_df = pd.DataFrame(low_ngram_scores, columns=['low ngram', 'low score'])\n",
+    "low_bigram_scores = low_finder.score_ngrams(measures.raw_freq)\n",
+    "low_bigram_scores_df = pd.DataFrame(low_bigram_scores, columns=['low ngram', 'low score'])\n",
     "\n",
     "## Display the frequency scores\n",
-    "display(high_ngram_scores_df.head(10),low_ngram_scores_df.head(10))"
+    "display(high_bigram_scores_df.head(10),low_bigram_scores_df.head(10))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 60,
    "id": "d7ba2ff9-a520-4773-8120-0ae601903ade",
    "metadata": {},
    "outputs": [],
@@ -2186,7 +2186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 61,
    "id": "d0f0ba3c-d9b9-48b6-bcd0-19595a86cd17",
    "metadata": {},
    "outputs": [
@@ -2204,7 +2204,150 @@
    "source": [
     "with plt.style.context(['dark_background',]):\n",
     "    with sns.plotting_context(\"talk\"):\n",
-    "        fig = plot_group_ngrams(low_ngram_scores_df, high_ngram_scores_df)"
+    "        fig = plot_group_ngrams(low_bigram_scores_df, high_bigram_scores_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "37a8b146-fbf6-4ffc-98a2-5c2a595ca180",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th colspan=\"2\" halign=\"left\">High Rating Reviews</th>\n",
+       "      <th colspan=\"2\" halign=\"left\">Low Rating Reviews</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th>high ngram</th>\n",
+       "      <th>high score</th>\n",
+       "      <th>low ngram</th>\n",
+       "      <th>low score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>(good, movie)</td>\n",
+       "      <td>0.000812</td>\n",
+       "      <td>(feel, like)</td>\n",
+       "      <td>0.001224</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>(feel, like)</td>\n",
+       "      <td>0.000786</td>\n",
+       "      <td>(look, like)</td>\n",
+       "      <td>0.000885</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>(watch, movie)</td>\n",
+       "      <td>0.000751</td>\n",
+       "      <td>(special, effect)</td>\n",
+       "      <td>0.000720</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>(comic, book)</td>\n",
+       "      <td>0.000577</td>\n",
+       "      <td>(watch, movie)</td>\n",
+       "      <td>0.000648</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>(good, film)</td>\n",
+       "      <td>0.000568</td>\n",
+       "      <td>(bad, movie)</td>\n",
+       "      <td>0.000576</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>(action, movie)</td>\n",
+       "      <td>0.000515</td>\n",
+       "      <td>(movie, like)</td>\n",
+       "      <td>0.000535</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>(movie, like)</td>\n",
+       "      <td>0.000507</td>\n",
+       "      <td>(good, movie)</td>\n",
+       "      <td>0.000494</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>(like, movie)</td>\n",
+       "      <td>0.000472</td>\n",
+       "      <td>(waste, time)</td>\n",
+       "      <td>0.000453</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>(special, effect)</td>\n",
+       "      <td>0.000463</td>\n",
+       "      <td>(bad, guy)</td>\n",
+       "      <td>0.000432</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>(main, character)</td>\n",
+       "      <td>0.000446</td>\n",
+       "      <td>(like, movie)</td>\n",
+       "      <td>0.000422</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  High Rating Reviews            Low Rating Reviews          \n",
+       "           high ngram high score          low ngram low score\n",
+       "0       (good, movie)   0.000812       (feel, like)  0.001224\n",
+       "1        (feel, like)   0.000786       (look, like)  0.000885\n",
+       "2      (watch, movie)   0.000751  (special, effect)  0.000720\n",
+       "3       (comic, book)   0.000577     (watch, movie)  0.000648\n",
+       "4        (good, film)   0.000568       (bad, movie)  0.000576\n",
+       "5     (action, movie)   0.000515      (movie, like)  0.000535\n",
+       "6       (movie, like)   0.000507      (good, movie)  0.000494\n",
+       "7       (like, movie)   0.000472      (waste, time)  0.000453\n",
+       "8   (special, effect)   0.000463         (bad, guy)  0.000432\n",
+       "9   (main, character)   0.000446      (like, movie)  0.000422"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Combine low and high reviews score dfs and add a group name as multi-index\n",
+    "df_compare_bigrams = pd.concat(\n",
+    "    [high_bigram_scores_df, low_bigram_scores_df],\n",
+    "    axis=1,\n",
+    "    keys=[\"High Rating Reviews\", \"Low Rating Reviews\"],\n",
+    ")\n",
+    "df_compare_bigrams.head(10)"
    ]
   },
   {
@@ -2501,8 +2644,167 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 45,
+   "id": "f3d574a9-5e9d-49d1-9363-4c36447ad5ba",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th colspan=\"2\" halign=\"left\">High Rating Reviews</th>\n",
+       "      <th colspan=\"2\" halign=\"left\">Low Rating Reviews</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th>high ngram</th>\n",
+       "      <th>high score</th>\n",
+       "      <th>low ngram</th>\n",
+       "      <th>low score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>(spoiler, free, review)</td>\n",
+       "      <td>0.000280</td>\n",
+       "      <td>(spoiler, free, review)</td>\n",
+       "      <td>0.000350</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>(enjoy, read, spoiler)</td>\n",
+       "      <td>0.000201</td>\n",
+       "      <td>(will, watch, recommend)</td>\n",
+       "      <td>0.000298</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>(free, review, follow)</td>\n",
+       "      <td>0.000201</td>\n",
+       "      <td>(enjoy, read, spoiler)</td>\n",
+       "      <td>0.000216</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>(read, spoiler, free)</td>\n",
+       "      <td>0.000201</td>\n",
+       "      <td>(free, review, follow)</td>\n",
+       "      <td>0.000216</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>(review, follow, blog)</td>\n",
+       "      <td>0.000201</td>\n",
+       "      <td>(read, spoiler, free)</td>\n",
+       "      <td>0.000216</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>(comic, book, movie)</td>\n",
+       "      <td>0.000140</td>\n",
+       "      <td>(review, follow, blog)</td>\n",
+       "      <td>0.000216</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>(star, wars, movie)</td>\n",
+       "      <td>0.000105</td>\n",
+       "      <td>(probably, will, watch)</td>\n",
+       "      <td>0.000154</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>(super, hero, movie)</td>\n",
+       "      <td>0.000105</td>\n",
+       "      <td>(jake, watt, read)</td>\n",
+       "      <td>0.000144</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>(bong, joon, ho)</td>\n",
+       "      <td>0.000087</td>\n",
+       "      <td>(read, jake, article)</td>\n",
+       "      <td>0.000144</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>(world, war, z)</td>\n",
+       "      <td>0.000087</td>\n",
+       "      <td>(watch, will, watch)</td>\n",
+       "      <td>0.000144</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       High Rating Reviews                   Low Rating Reviews          \n",
+       "                high ngram high score                 low ngram low score\n",
+       "0  (spoiler, free, review)   0.000280   (spoiler, free, review)  0.000350\n",
+       "1   (enjoy, read, spoiler)   0.000201  (will, watch, recommend)  0.000298\n",
+       "2   (free, review, follow)   0.000201    (enjoy, read, spoiler)  0.000216\n",
+       "3    (read, spoiler, free)   0.000201    (free, review, follow)  0.000216\n",
+       "4   (review, follow, blog)   0.000201     (read, spoiler, free)  0.000216\n",
+       "5     (comic, book, movie)   0.000140    (review, follow, blog)  0.000216\n",
+       "6      (star, wars, movie)   0.000105   (probably, will, watch)  0.000154\n",
+       "7     (super, hero, movie)   0.000105        (jake, watt, read)  0.000144\n",
+       "8         (bong, joon, ho)   0.000087     (read, jake, article)  0.000144\n",
+       "9          (world, war, z)   0.000087      (watch, will, watch)  0.000144"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Combine low and high reviews score dfs and add a group name as multi-index\n",
+    "df_compare_bigrams = pd.concat(\n",
+    "    [high_ngram_scores_df, low_ngram_scores_df],\n",
+    "    axis=1,\n",
+    "    keys=[\"High Rating Reviews\", \"Low Rating Reviews\"],\n",
+    ")\n",
+    "df_compare_bigrams.head(10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4730480e-fd69-4bb0-aca5-8d901811f101",
+   "metadata": {},
+   "source": [
+    "***3 things associated with High Ratings***\n",
+    "- The main characters are liked by the viewers.\n",
+    "- Long movies attract people to watch them\n",
+    "- Sci-fi movies are popular.\n",
+    "\n",
+    "***3 things associated with Low Ratings*** \n",
+    "- Horror movies get the most bad reviews\n",
+    "- Poor special effects \n",
+    "- The ending was not good"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "2c317cd2-9490-44a3-bcd2-50420ad8cf32",
+   "id": "486e9b56-e462-48b7-a24d-d38fbd7c5c38",
    "metadata": {},
    "outputs": [],
    "source": []
